landing page bug fixed / members page alignes correctly / links to memeber resources works

--- a/client/src/assets/css/member.css
+++ b/client/src/assets/css/member.css
@@ -1,13 +1,5 @@
-
 .memberInfo {
     display: inline-block;
-    margin-right:10vw;
-}
-.memberIndividual{
-    /* background-color: rgba(141, 140, 128, 0.36); */
-    border-bottom: 2px solid #f5f5f5;
-    display: flex;
-    justify-content: space-evenly;
 }
 
 img.memberImg {
@@ -25,6 +17,8 @@ img.memberImg {
 .title{
     font-weight: bold;
 }
-linkedin , github{
+.linkedin , .github, .portfolio{
     font-weight: bold;
+    text-decoration: underline;
+    cursor: pointer;
 }
