--- a/client/src/assets/css/recipe.css
+++ b/client/src/assets/css/recipe.css
@@ -390,3 +390,6 @@ ol>li {
 .activeTab{
     background-color: #ffcc80;
 }
+.hideWine{
+    display: none;
+}
